src/objects/Quality_Review_Tracking__c.object
<CustomObject>
    <description>This object is for the QRS to input work completed daily</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Daily_Goal__c</fullName>
        <label>Daily Goal</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Worked__c</fullName>
        <label>Date Worked</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Goal_Not_Met_Because__c</fullName>
        <label>Goal Not Met Because</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Management_Comments__c</fullName>
        <label>Management Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OT_Hours_Worked__c</fullName>
        <label>OT Hours Worked</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Report_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pending Report 10</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quality Review Tracking (Pending Report 10)</relationshipLabel>
        <relationshipName>Quality_Review_Tracking9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_Report_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pending Report 1</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quality Review Tracking</relationshipLabel>
        <relationshipName>Quality_Review_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_Report_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pending Report 2</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Quality Review Tracking (Pending Report 2)</relationshipLabel>
        <relationshipName>Quality_Review_Tracking1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Queues_Worked__c</fullName>
        <label>Queues Worked</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A Queue</fullName>
                </value>
                <value>
                    <fullName>QA Queue</fullName>
                </value>
                <value>
                    <fullName>D Queue</fullName>
                </value>
                <value>
                    <fullName>Second Review</fullName>
                </value>
                <value>
                    <fullName>Special Project</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reg_Hours_Worked__c</fullName>
        <label>Reg Hours Worked</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Listing__c</fullName>
        <label>Report Listing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>of_Errors__c</fullName>
        <label># of Errors</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Reports_Approved__c</fullName>
        <label># of Reports Approved</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>or_Reports_Pending__c</fullName>
        <label># or Reports Pending</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quality Review Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Quality Review Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Review Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>